--- a/src/styles/Accesos.css
+++ b/src/styles/Accesos.css
@@ -1,38 +1,3 @@
-/* .container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .top {
-    flex: 1;
-    display: flex;
-  }
-  
-  .section {
-    height: 100%;
-  }
-  
-  .section:nth-child(1) {
-    flex: 0 0 35%;
-    background-color: #cc9a9a;
-  }
-  
-  .section:nth-child(2) {
-    flex: 0 0 35%;
-    background-color: #7c4b4b;
-  }
-  
-  .section:nth-child(3) {
-    flex: 0 0 30%;
-    background-color: #c51616;
-  }
-  
-  .bottom {
-    flex: 1;
-    background-color: #676fde;
-  } */
-
   .container {
     display: flex;
     flex-direction: column;
@@ -45,6 +10,7 @@
   }
   
   .bottom {
+    
     flex: 1;
     display: flex;
   }
@@ -53,15 +19,19 @@
     flex: 1;
   }
   
+/* Estilos para la parte 1 */
   .part1 {
-    background-color: #b38282;
+    background-color: #cbbbbb;
     flex-basis: 35%;
     padding: 20px;
+    border-bottom: 4px solid #000000;
   }
+
+
   .part1 h2 {
     margin-bottom: 25px;
     font-size: 60px;
-    background-color: red;
+    background-color: ffffff;
   }
   .part1 p {
     margin-bottom: 25px;
@@ -88,13 +58,22 @@
     cursor: pointer;
   }
 
+  .textbox.non-editable {
+    background-color: #ddd; /* un color de fondo gris claro para dar la impresión de que no es editable */
+    color: #888; /* un color de texto gris oscuro */
+    cursor: not-allowed; /* cambia el cursor para dar la impresión de que no es editable */
+  }
+
+/*Estilos para la parte 2*/
+
   .part2 {
-    background-color: #8ad54d;
+    background-color: #cbbbbb;
     flex-basis: 35%;
     padding: 50px;
  
-    border: 1px solid #000000;
-    border-radius: 20px;
+    border-bottom: 4px solid #000000;
+    
+    border-radius: 0px;
 
   }
   
@@ -108,24 +87,40 @@
   }
 
   .part3 {
-    background-color: #8685df;
+    background-color: #cbbbbb;
     flex-basis: 30%;
     padding: 20px;
+    border-bottom: 4px solid #000000;
   }
   
   .part4 {
-    background-color: #e03f3f;
-    flex-basis: 20%;
+    background-color: #7ce4f0;
+    flex-basis: 35%;
+    padding: 20px;
   }
   
+  .part4 h2 {
+    margin-bottom: 25px;
+    font-size: 60px;
+    background-color: 7ce4f0;
+    
+  }
+  .part4 p {
+    margin-bottom: 25px;
+    font-size: 50px;
+    
+  }
+
   .part5 {
-    background-color: #d39c9c;
-    flex-basis: 20%;
+    background-color: #7ce4f0;
+    flex-basis: 5%;
   }
   
   .part6 {
-    background-color: #814545;
+    background-color: #7ce4f0;
     flex-basis: 60%;
+    padding: 100px;
+    padding-left: 150px;
   }
   
   /* checkbox */
@@ -184,6 +179,7 @@
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    
    
   }
   
@@ -196,35 +192,38 @@
     font-weight: bold;
     transition: background-color 0.3s;
     
+    
   }
   
   .tab.selected {
     background-color: #ff0000;
     color: #fff;
-    border-color: black;
+    border-color: rgb(230, 59, 59);
   }
   
   .content {
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #000000;
     border-radius: 10px;
     background-color: #fff;
+    
     
   }
   
   .content.negro {
     color: #000;
-    border-color: black;
+    border-color: rgb(186, 12, 12);
   }
   
   .content.rojo {
-    color: #ff0000;
+    color: #512e2e;
+    
   }
   
 /*pestaña izquierda*/
 .dropdown-container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   
 }
@@ -238,27 +237,27 @@
 }
 
 .dropdown select {
-  width: 60px;
-  height: 60px;
-  padding: 10px;
-  font-size: 30px;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  font-size: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #fff;
   appearance: none;
   text-align: center; 
-  
+  margin-right: 20px;
 }
 
 .dropdown label {
   margin-right: 10px;
-  font-size: 30px;
+  font-size: 20px;
   
 }
 
 .dropdown select:focus {
   outline: none;
-  border-color: #888;
+  border-color: #cb3030;
   background-color: rgb(215, 182, 182);
 }
 
@@ -284,10 +283,11 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #171515;
+  
 }
 
-.combination-box p {
+.combination-box h2 {
   text-align: center;
   font-size: 70px;
 }
@@ -298,4 +298,60 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
+}
+.automatico-container p {
+  text-align: center;
+  font-size: 20px;
+}
+
+
+/*Part 6*/
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+label {
+  width: 200px;
+  font-weight: bold;
+}
+
+input,
+textarea {
+  width: 300px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+
+/*MODAL*/
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  width: 400px;
+  max-width: 100%;
+}
+
+.factura {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detalles {
+  margin-bottom: 20px;
+  text-align: center;
 }
