--- a/src/styles/Accesos.css
+++ b/src/styles/Accesos.css
@@ -355,3 +355,25 @@ textarea {
   margin-bottom: 20px;
   text-align: center;
 }
+
+/* Botones */
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 20px;
+}
+
+.buttons button {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #4CAF50;
+  color: white;
+  cursor: pointer;
+}
+
+.buttons button:hover {
+  background-color: #45a049;
+}
