--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ input {
 }
 
 input:focus {
-    border-color: #5b08a7;
+    border-color: #000000;
 }
 
 .btn,
@@ -124,7 +124,7 @@ input:focus {
 .btn-delete {
     font-family: "Roboto", sans-serif;
     outline: 0;
-    background: #5b08a7;
+    background: #000000;
     border: 0;
     text-decoration: none;
     padding: 15px;
@@ -167,7 +167,7 @@ input:focus {
 .btn:hover,
 .btn:active,
 .btn:focus {
-    background: #5b08a7;
+    background: #000000;
 }
 
 .text-center {
@@ -253,7 +253,7 @@ table > tbody > tr > td {
 }
 
 .login-signup-form .form .message a {
-    color: #5b08a7;
+    color: #030303;
     text-decoration: none;
 }
 
@@ -266,7 +266,7 @@ table > tbody > tr > td {
 
 #defaultLayout aside {
     width: 240px;
-    background-color: #5b08a7;
+    background-color: #000000;
     padding: 1rem
 }
 
